# MyTests

./: README.md
backend/myproject/: Dockerfile  docker-compose.yml  pyproject.toml
backend/myproject/data/db/base/13757/: pg_internal.init
backend/myproject/data/db/base/16384/: 1247  1249  1259  16386  16404  2579  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
backend/myproject/data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
backend/myproject/data/db/pg_stat/: db_0.stat  db_16384.stat  global.stat
backend/myproject/myproject/: settings.py
backend/mytutorials/: docker-compose.yml  manage.py  pyproject.toml
backend/mytutorials/data/db/: postmaster.pid
backend/mytutorials/data/db/base/13757/: pg_internal.init
backend/mytutorials/data/db/base/16384/: 1247  1249  1259  16385  16386  16392  16394  16395  16399  16401  16403  16404  16408  16426  16431  16449  16456  16472  16501  16508  16509  16521  16522  16527  16536  16538  16539  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  (+16 more)
backend/mytutorials/data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
backend/mytutorials/data/db/pg_stat/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
backend/mytutorials/data/db/pg_stat_tmp/: db_0.stat  global.stat
backend/mytutorials/mytutorials/: asgi.py  settings.py  urls.py  wsgi.py
backend/mytutorials/telegrambot/: urls.py  views.py
backend/mytutorials/telegrambot/helpers/: echobot_helper.py
